<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hedgewars</string>
    <string name="select">Select</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="saved">Saved succesfully</string>

    <!-- SDCARD -->
    <string name="sdcard_not_mounted_title">Sorry! Could not find the SDCard</string>
    <string name="sdcard_not_mounted">There\'s been an error when accessing the SDcard. Please check if there is an SDcard present in the device (internal or external) and if the SDcard is not mounted (via usb to your computer for example). Hedgewars for Android will now quit</string>

    <!-- Notification -->
    <string name="notification_title">Downloading hedgewars files&#8230;</string>
    <string name="notification_done">Successfully downloaded: </string>

    <!-- Download Activity -->
    <string name="download_background">Continue in background</string>
    <string name="download_cancel">Cancel</string>
    <string name="download_done">Done</string>
    <string name="download_back">Back to main menu</string>
    <string name="download_tryagain">Try again</string>
    <string name="download_failed">The download has failed because of: </string>
    <string name="download_userexplain">Before starting the game we must download some extra files&#8230;</string>
    <string name="download_areyousure">Are you sure you want to download this package?</string>
    <string name="download_alreadydownloaded">You\'ve already downloaded this package, are you sure you want to download it again?</string>
    <string name="download_downloadnow">Download now!</string>
    <string name="download_queued">This download has been queued</string>

    <!-- main activity -->
    <string name="main_button_localplay">Local Game</string>
    <string name="main_button_netplay">Network Game</string>
    <string name="main_menu_downloader">Downloader</string>
    <string name="main_menu_preferences">Preferences</string>
    
    <!-- start game -->
    <string name="start_gameplay">Style</string>
    <string name="start_gamescheme">Scheme</string>
    <string name="start_weapons">Weapons</string>
    <string name="start_map">Map</string>
    <string name="start_filter">Filter</string>

    <!-- Teams -->
    <string name="not_enough_teams">You need at least two teams.</string>
    <string name="not_enough_clans">You need at least two different team colors (clans).</string>
    <string name="teamlist_empty">No teams</string>
    <string name="teamlist_add_content_description">New team</string>
    
    <!-- Settings -->
    <string name="name">Name</string>
    <string name="name_default">Unnamed</string>
    <string name="type">Type</string>
    <string name="grave">Grave</string>
    <string name="flag">Flag</string>
    <string name="voice">Voice</string>
    <string name="fort">Fort</string>

    <!-- Difficulty levels -->
    <string name="human">Human</string>
    <string name="bot5">Level 5</string>
    <string name="bot4">Level 4</string>
    <string name="bot3">Level 3</string>
    <string name="bot2">Level 2</string>
    <string name="bot1">Level 1</string>

    <string name="title_activity_lobby">Hedgewars Server Lobby</string>
    <string name="title_activity_room">Room</string>
    <string name="title_activity_weaponset_list">User-defined Weaponsets</string>
    <string name="title_activity_weaponset_creator">Weaponset Editor</string>
    <string name="title_activity_scheme_list">User-defined Schemes</string>
    <string name="title_activity_scheme_creator">Scheme Editor</string>
    
    <string name="chat_hint">Type here to chat</string>

    <!-- Map settings -->
    <string name="map_gen">Map</string>
    <string name="map_name">Name</string>
    <string name="map_template">Type</string>
    <string name="map_maze_size">Type</string>
    <string name="map_mission_prefix">Mission: </string>
    <string name="map_button_editdrawnmap">Edit drawn map</string>
    <string-array name="map_types">
        <item>Generated map</item>
        <item>Generated maze</item>
        <item>Hand-drawn map</item>
        <item>Map file</item>
    </string-array>
    <string-array name="map_templates">
        <item>Random</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Cavern</item>
        <item>Wacky</item>
    </string-array>
    <string-array name="map_maze_sizes">
        <item>Small tunnels</item>
        <item>Medium tunnels</item>
        <item>Large tunnels</item>
        <item>Small floating islands</item>
        <item>Medium floating islands</item>
        <item>Large floating islands</item>
    </string-array>
    
    <!-- Player list -->
    <string name="no_players_in_list">No players</string>
    
    <!-- Teamlist -->
    <string name="teamlist_addteam">Add team</string>
    <string name="teamlist_color_button_description">Team color</string>
    <string name="teamlist_hogcount_button_description">Hog count</string>
    <string name="no_teams_in_list">No teams</string>
    <string name="edit_teams_menu">Edit Teams</string>
    
    <!-- Roomlist -->
    <string name="roomlist_header_roomname">Room Name</string>
    <string name="roomlist_header_clients">C</string>
    <string name="roomlist_header_teams">T</string>
    <string name="roomlist_header_owner">Owner</string>
    <string name="roomlist_header_map">Map</string>
    <string name="roomlist_header_scheme">Rules</string>
    <string name="roomlist_header_weapons">Weapons</string>
    <string name="no_rooms_in_list">No rooms</string>
    
    <string name="roomlist_owner">by %1$s</string>
    <string name="roomlist_map">Map: %1$s</string>
    <string name="roomlist_scheme">Scheme: %1$s</string>
    <string name="map_regular">Random map</string>
    <string name="map_maze">Random maze</string>
    <string name="map_drawn">Drawn map</string>
    
    <!-- Chatlog messages -->
    <string name="log_player_join">%1$s has joined.</string>
    <string name="log_player_leave">%1$s has left.</string>
    <string name="log_player_leave_with_msg">%1$s has left (%2$s).</string>
    
    <!-- Start netgame dialog -->
    <string name="start_netgame_dialog_title">Connect</string>
    <string name="start_netgame_dialog_message">Please select a username.</string>
    <string name="start_netgame_dialog_playername_hint">Username</string>
    
    <string name="playerlist_contextmenu_kick">Kick</string>
    <string name="lobby_playerlist_contextmenu_info">Info (shown in chat)</string>
    <string name="lobby_playerlist_contextmenu_follow">Follow</string>
    <string name="lobby_roomlistmenu_create">Create room</string>
    <string name="lobby_roomlistmenu_refresh">Refresh</string>
    <string name="lobby_menu_disconnect">Disconnect</string>
    <string name="lobby_tab_rooms">Rooms</string>
    <string name="lobby_tab_chat">Chat</string>
    <string name="lobby_tab_players">Users</string>
    
    <string name="not_implemented_yet">Sorry, not implemented yet. :(</string>
    
    <!-- Errors -->
    <string name="error_connection_failed">Unable to connect to the server.</string>
    <string name="error_unexpected">An unexpected error has occurred: %1$s</string>
    <string name="error_server_too_old">The server you tried to connect to is using an incompatible protocol.</string>
    <string name="error_auth_failed">Unable to authenticate for your username.</string>
    <string name="error_connection_lost">The connection to the server was lost.</string>
    <string name="error_save_failed">Saving has failed.</string>
    <string name="error_missing_sdcard_or_files">Error: Either the sdcard is not available, or files are missing from the Data directory.</string>
    <string name="error_team_attribute_not_found">Error: This team uses assets which we do not have. Try downloading the big data package from the main menu.</string>
    
    <!-- Dialogs -->
    <string name="dialog_connecting_title">Please wait</string>
    <string name="dialog_connecting_message">Connecting to the server&#8230;</string>
    <string name="dialog_password_title">Password required</string>
    <string name="dialog_password_message">The server has requested a password to connect as "%1$s".</string>
    <string name="dialog_password_hint">Password</string>
    <string name="dialog_password_remember">remember password</string>
    <string name="dialog_create_room_hint">Room name</string>
    <string name="dialog_create_room_title">Create new room</string>
    <string name="dialog_addteam_title">Add team</string>
    
    <string name="toast_disconnected">Disconnected: %1$s</string>
    <string name="toast_room_abandoned">The room was closed because the owner left.</string>
    <string name="toast_kicked">You were kicked from the room.</string>
    
    <!-- Weaponset editor -->
    <string name="weaponsetlist_add_button_text">New Weaponset</string>
    <string name="weaponsetlist_empty">No weaponsets</string>
    <string name="edit_weaponsets_menu">Edit Weaponsets</string>
    
    <string name="schemelist_add_button_text">New Scheme</string>
    
    <!-- Room activity tabs -->
    <string name="room_tab_map">Map</string>
    <string name="room_tab_settings">Game</string>
    <string name="room_tab_teams">Teams</string>
    <string name="room_tab_chat">Chat</string>
    <string name="room_tab_players">Users</string>
</resources>
