<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <include
    	layout="@layout/background"/>
     
    <ImageView
    	android:id="@+id/mapPreview"
    	android:layout_width="256dip"
    	android:layout_height="128dip"
    	android:layout_margin="5dip"
    	android:scaleType="fitXY"
    	android:background="@drawable/box"
    	android:src="@drawable/backbutton"/>
    
    <Spinner 
       	android:id="@+id/spinMaps"
       	android:layout_height="wrap_content"
       	android:layout_width="wrap_content"    
       	android:layout_below="@id/mapPreview"
       	android:layout_alignRight="@id/mapPreview"
       	android:layout_toRightOf="@+id/txtMap"
       	android:background="@drawable/dropdown"/>
    <TextView
		android:id="@id/txtMap"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/start_map"
		android:layout_alignTop="@id/spinMaps"
		android:layout_alignBottom="@id/spinMaps"
		android:layout_alignLeft="@id/mapPreview"
		android:gravity="center"/>	
   	
    <TableLayout 
       	android:id="@+id/gameOptions" 
       	android:layout_height="wrap_content" 
       	android:layout_width="wrap_content"
       	android:layout_centerHorizontal="true"
       	android:layout_toRightOf="@id/mapPreview" 
       	android:layout_alignParentRight="true"
       	android:padding="3dip"
       	android:layout_margin="5dip"
       	android:background="@drawable/box"
       	android:stretchColumns="0,2"
       	android:shrinkColumns="1">
	       	
       	<TableRow>
        	 <TextView 
		        android:id="@+id/txtGameplay"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:text="@string/start_gameplay"/>
        	<Spinner
	        	android:id="@+id/spinGameplay"
	        	android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:background="@drawable/dropdown"
		        />
		</TableRow>  
		<TableRow>
		    <TextView 
		        android:id="@+id/txtGamescheme"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:text="@string/start_gamescheme"/>
		    <Spinner
		       	android:id="@+id/spinGamescheme"
		       	android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:background="@drawable/dropdown"/>
		    <ImageButton
		    	android:id="@+id/btnGamescheme"
		    	android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:background="@drawable/edit"
		        android:adjustViewBounds="true"
		        android:scaleType="centerInside"
		        android:layout_gravity="center"
		        android:padding="3dip"/>
		 </TableRow>
		 <TableRow>    
		     <TextView 
		        android:id="@+id/txtweapons"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_below="@id/txtGamescheme"
		        android:layout_marginTop="5dip"
		        android:text="@string/start_weapons"/>
	        
	        <Spinner
	        	android:id="@+id/spinweapons"
	        	android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:background="@drawable/dropdown"/>
		    
		    <ImageButton
		    	android:id="@+id/btnweapons"
		    	android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:background="@drawable/edit"
		        android:adjustViewBounds="true"
		        android:scaleType="centerInside"
		        android:layout_gravity="center"
		        android:padding="3dip"/>
        </TableRow>	
    </TableLayout>
        
    <ImageView 
       	android:id="@+id/imgTheme"
       	android:layout_height="wrap_content" 
       	android:layout_width="wrap_content"
       	android:layout_alignTop="@+id/spinTheme"
       	android:layout_alignBottom="@id/spinTheme"
       	android:layout_alignLeft="@id/gameOptions"
       	android:adjustViewBounds="true"/>
       
    <Spinner
        android:id="@id/spinTheme"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" 
        android:layout_toRightOf="@+id/imgTheme"
        android:layout_alignParentRight="true"
       	android:layout_below="@id/gameOptions"
       	android:background="@drawable/dropdown"/>
        
	<include layout="@layout/backbutton"/>
    
    <LinearLayout
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentBottom="true"
    	android:layout_centerHorizontal="true"
    	android:orientation="horizontal">
    <ImageButton
    	android:id="@+id/btnTeams"
    	android:layout_width="120dip"
    	android:layout_height="40dip"
    	android:adjustViewBounds="true"
    	android:scaleType="centerInside"
    	android:background="@android:color/transparent"
    	android:src="@drawable/teams"/>
    <ImageView
    	android:id="@+id/imgTeamsCount"
    	android:layout_width="40dip"
    	android:layout_height="40dip"
    	android:adjustViewBounds="true"
    	android:scaleType="centerInside"
    	android:background="@android:color/transparent"
    	android:src="@drawable/teams_number"/>
        
    </LinearLayout>

    <ImageButton
    	android:id="@+id/btnStart"
    	android:layout_width="120dip"
    	android:layout_height="40dip"
    	android:layout_alignParentBottom="true"
    	android:layout_alignParentRight="true"
    	android:adjustViewBounds="true"
    	android:scaleType="centerInside"
    	android:background="@android:color/transparent"
    	android:src="@drawable/startgamebutton"/>

</RelativeLayout>

